backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: alifarjad/dswa3:latest
          resources:
            requests:
              cpu: "250m"
            limits:
              cpu: "500m"
          ports:
            - containerPort: 5002
